--- a/README
+++ b/README
@@ -1,5 +1,18 @@
 License: GPLv2.  See COPYING for details.
 
+This version compiles only on CPU supporting the AES-NI instruction set.
+
+If building from git repo:
+	chmod +x autogen.sh
+	./autogen.sh
+	./configure CFLAGS="-O3 -march=native"  # march=native mandatory, for compile on AES-NI processors 
+						#or use:
+	./configure CFLAGS="-O3 -msse2 -msse3 -mssse3 -maes -mavx # if you want to compile on a different machine
+	make
+	
+If you like to donate some mined coin here it is my DRK address:
+XxSJMTPKqRzADNe7Y3pazXF8jPV95EvDnS
+
 Poolers original README:
 
 Downloads:  https://sourceforge.net/projects/cpuminer/files/
